--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -2,10 +2,11 @@
     place-self: center;
     padding: 40px;
     border-radius: 10px;
-    background-image: linear-gradient(45deg, #2f4680,#291754);
+    background-image: linear-gradient(45deg, #633514,#0b4529);
     display: flex;
     flex-direction: column;
     align-items: center;
+    opacity: .85;
 }
 .search-bar{
     display: flex;
@@ -19,9 +20,9 @@
     border-radius: 20px;
     padding-left: 20px;
     color:#ffffff;
-    background: #291754;
+    background: #051a0f;
     font-size: 18px;
-    opacity: .45;
+
 }
 /*.search-bar img{
     width: 50px;
@@ -32,7 +33,7 @@
 }
 */
 .search-bar img{
-    opacity: .45;
+
     cursor: pointer;
     width: 35px;
 }
