--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,13 @@
   box-sizing: border-box;
   font-family: Titillium Web, sans-serif;
   font-weight: 300;
+  
 }
 .app{
   min-height: 100vh;
   display: grid;
-  background: #2f4680;
-  background-image: linear-gradient(-45deg, #2f4680,#291754);
+  background-image: url('./IMG_1077.webp'); /* Update the path to your background image */
+  background-size: cover;
+  background-position: center;
 
 }
